--- a/index.html
+++ b/index.html
@@ -73,10 +73,11 @@
         </div>
         <div id="release">
             <div id="date">
-                <h1>Coming Soon</h1>
+                <h1>Coming Soon!</h1>
             </div>
         </div>
         <div id="team">
+                <h2>The Team</h2>
             <div class="flex-grid">
                 <div class="col">
                     <span class="name">Alex Gilbert</span>
