updated with slamdslam

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                 </div>
                 <div class="col">
                     <span class="name">Davin Lee</span>
-                    <span class="github"><a href="https://github.com/dlee20013" target="_blank">@dlee20013</a></span>
+                    <span class="github"><a href="https://github.com/slamdslam" target="_blank">@slamdslam</a></span>
                 </div>
                 <div class="col">
                     <span class="name">Kanon Shibata</span>
